--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -7,30 +7,27 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/placeImg"
+        android:id="@+id/place_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="141dp"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="302dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="135dp"
         android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/placeLbl"
+        app:layout_constraintTop_toBottomOf="@+id/place_txt"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/placeLbl"
+        android:id="@+id/place_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="176dp"
-        android:layout_marginTop="282dp"
         android:layout_marginEnd="177dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/placeImg"
+        app:layout_constraintBottom_toTopOf="@+id/place_iv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
